# opendaw-native-audio-poc

./: .gitignore  Cargo.toml  README.md  justfile
docs/: l12-recording-test.md  protocol.md
public/: app.js  audio-worker.js  bridge-processor.js  index.html  pcm-block.js  recorder.js  ring-buffer.js  style.css  wav.js
scripts/: browser-smoke.mjs  inspect-recording-manifest.mjs  l12-recording-session.mjs
src/: main.rs
test/: l12-recording-session.test.mjs  pcm-block.test.mjs  recorder.test.mjs  recording-manifest-inspector.test.mjs  ring-buffer.test.mjs  wav.test.mjs
